--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "author": "",
   "license": "ISC",
+  "peerDependencies": {
+    "graphql": "^15.0.0"
+  },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
     "@babel/plugin-transform-destructuring": "^7.9.5",
@@ -36,7 +39,6 @@
     "npm-run-all": "^4.1.5",
     "nyc": "^15.0.1",
     "rollup": "^2.6.1",
-    "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-gzip": "^2.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
