--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "@babel/plugin-transform-spread": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "ava": "^3.7.1",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-transform-async-to-promises": "^0.8.15",
+    "eslint-config-xo-flow": "^0.2.0",
+    "eslint-plugin-flowtype": "^4.7.0",
     "esm": "^3.2.25",
     "flow-bin": "^0.123.0",
     "graphql": "^15.0.0",
