--- a/package.json
+++ b/package.json
@@ -25,25 +25,26 @@
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
-    "@babel/plugin-transform-destructuring": "^7.9.5",
-    "@babel/plugin-transform-flow-strip-types": "^7.9.0",
-    "@babel/plugin-transform-for-of": "^7.9.0",
-    "@babel/plugin-transform-spread": "^7.8.3",
-    "@babel/preset-env": "^7.9.5",
-    "ava": "^3.7.1",
+    "@babel/plugin-transform-destructuring": "^7.10.1",
+    "@babel/plugin-transform-flow-strip-types": "^7.10.1",
+    "@babel/plugin-transform-for-of": "^7.10.1",
+    "@babel/plugin-transform-spread": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "ava": "^3.8.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-async-to-promises": "^0.8.15",
+    "dummee": "^1.2.0",
     "eslint-config-xo-flow": "^0.2.0",
     "eslint-plugin-flowtype": "^4.7.0",
     "esm": "^3.2.25",
     "flow-bin": "^0.123.0",
-    "graphql": "^15.0.0",
-    "nodemon": "^2.0.3",
+    "graphql": "^15.1.0",
+    "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.0.1",
-    "rollup": "^2.6.1",
+    "nyc": "^15.1.0",
+    "rollup": "^2.16.0",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-gzip": "^2.4.0",
+    "rollup-plugin-gzip": "^2.5.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.3.0",
     "xo": "^0.29.1"
@@ -64,7 +65,10 @@
         }
       },
       {
-        "files": ["*.config.js", "*.config.cjs"],
+        "files": [
+          "*.config.js",
+          "*.config.cjs"
+        ],
         "rules": {
           "flowtype/require-valid-file-annotation": "off"
         }
