--- a/package.json
+++ b/package.json
@@ -30,24 +30,24 @@
     "@babel/plugin-transform-for-of": "^7.10.1",
     "@babel/plugin-transform-spread": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
-    "ava": "^3.8.2",
+    "@rollup/plugin-babel": "^5.0.3",
+    "@rollup/plugin-node-resolve": "^8.0.1",
+    "ava": "^3.9.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-async-to-promises": "^0.8.15",
     "dummee": "^1.2.0",
     "eslint-config-xo-flow": "^0.2.0",
-    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-flowtype": "^5.1.3",
     "esm": "^3.2.25",
-    "flow-bin": "^0.123.0",
+    "flow-bin": "^0.127.0",
     "graphql": "^15.1.0",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "rollup": "^2.16.0",
-    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-gzip": "^2.5.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "xo": "^0.29.1"
+    "rollup-plugin-terser": "^6.1.0",
+    "xo": "^0.32.0"
   },
   "xo": {
     "extends": [
