--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "graphql-client",
+  "name": "@awardit/graphql-ast-client",
   "version": "0.1.0",
   "description": "Experimental small GraphQL client adaptable to HTTP/1.x or HTTP/2.x",
-  "main": "dist/index.js",
+  "authors": [
+    "Martin Wernstål <m4rw3r@gmail.com>"
+  ],
+  "license": "MIT",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "sideEffects": false,
   "scripts": {
     "build": "npm-run-all build:*",
     "build:rollup": "rollup -c rollup.config.js",
