--- a/package.json
+++ b/package.json
@@ -160,12 +160,8 @@
           "allowTemplateLiterals": true
         }
       ],
-      "unicorn/catch-error-name": [
-        "error",
-        {
-          "name": "e"
-        }
-      ],
+      "unicorn/no-reduce": "off",
+      "unicorn/no-fn-reference-in-iterator": "off",
       "valid-jsdoc": "off"
     },
     "space": 2
