style: stop complaining about more params

--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
           "ignoreTemplateLiterals": true
         }
       ],
+      "max-params": "off",
       "no-unused-vars": "error",
       "object-curly-spacing": [
         "error",
