package: it is a rollup-plugin

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rollup-plugin-graphql-ast-import",
   "version": "0.1.0",
   "description": "Rollup plugin enabling imports of operations as AST from .graphql files.",
-  "keywords": ["rollup", "import", "graphql", "ast"],
+  "keywords": ["rollup-plugin", "import", "graphql", "ast"],
   "authors": [
     "Martin Wernstål <m4rw3r@gmail.com>"
   ],
