--- a/package.json
+++ b/package.json
@@ -32,24 +32,24 @@
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
-    "@babel/plugin-transform-flow-strip-types": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "@rollup/plugin-babel": "^5.0.3",
-    "@rollup/plugin-node-resolve": "^8.0.1",
-    "ava": "^3.9.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.10.4",
+    "@babel/preset-env": "^7.10.3",
+    "@rollup/plugin-babel": "^5.0.4",
+    "@rollup/plugin-node-resolve": "^8.1.0",
+    "ava": "^3.13.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-async-to-promises": "^0.8.15",
     "dummee": "^1.2.0",
     "eslint-config-xo-flow": "^0.2.0",
-    "eslint-plugin-flowtype": "^5.1.3",
+    "eslint-plugin-flowtype": "^5.2.0",
     "esm": "^3.2.25",
-    "flow-bin": "^0.127.0",
-    "graphql": "^15.1.0",
+    "flow-bin": "^0.135.0",
+    "graphql": "^15.3.0",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "rollup": "^2.16.0",
-    "xo": "^0.32.0"
+    "rollup": "^2.28.0",
+    "xo": "^0.33.1"
   },
   "xo": {
     "extends": [
@@ -133,6 +133,7 @@
         }
       ],
       "max-params": "off",
+      "no-promise-executor-return": "off",
       "no-unused-vars": "error",
       "object-curly-spacing": [
         "error",
