--- a/.flowconfig
+++ b/.flowconfig
@@ -2,11 +2,12 @@
 <PROJECT_ROOT>/.nyc_output/.*
 <PROJECT_ROOT>/coverage/.*
 <PROJECT_ROOT>/dist/.*
+; Defective package.json in resolve module
+<PROJECT_ROOT>/node_modules/resolve/test/resolver/.*
 
 [lints]
 uninitialized-instance-property=error
 
 [options]
 include_warnings=true
-esproposal.optional_chaining=enable
 experimental.const_params=true
