--- a/package.json
+++ b/package.json
@@ -28,28 +28,27 @@
     "access": "public"
   },
   "peerDependencies": {
-    "graphql": "^15.0.0"
+    "graphql": "^15.0.0|^16.0.0"
   },
   "devDependencies": {
-    "@ava/babel": "^1.0.1",
     "@babel/plugin-transform-flow-strip-types": "^7.10.4",
     "@babel/preset-env": "^7.10.3",
+    "@babel/register": "^7.17.7",
     "@rollup/plugin-babel": "^5.0.4",
-    "@rollup/plugin-node-resolve": "^8.1.0",
-    "ava": "^3.13.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "ava": "^4.3.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-transform-async-to-promises": "^0.8.15",
     "dummee": "^1.2.0",
-    "eslint-config-xo-flow": "^0.2.0",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "esm": "^3.2.25",
+    "eslint-config-xo-flow": "^0.3.0",
+    "eslint-plugin-flowtype": "^8.0.3",
     "flow-bin": "^0.180.0",
     "graphql": "^16.0.0",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "rollup": "^2.28.0",
-    "xo": "^0.33.1"
+    "xo": "^0.50.0"
   },
   "xo": {
     "extends": [
