--- a/package.json
+++ b/package.json
@@ -152,8 +152,9 @@
           "allowTemplateLiterals": true
         }
       ],
-      "unicorn/no-reduce": "off",
-      "unicorn/no-fn-reference-in-iterator": "off",
+      "unicorn/no-array-reduce": "off",
+      "unicorn/no-array-for-each": "off",
+      "unicorn/no-array-callback-reference": "off",
       "valid-jsdoc": "off"
     },
     "space": 2
