fix: syntax for peerDependency

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "access": "public"
   },
   "peerDependencies": {
-    "graphql": "^15.0.0|^16.0.0"
+    "graphql": "^15.0.0||^16.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
