--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,5 +40,16 @@
     "allowUnusedLabels": false,
     "allowUnreachableCode": false,
     "skipLibCheck": false
+  },
+  /* Tool configuration */
+  "ts-node": {
+    "moduleTypes": {
+      /*
+      Manually declare that all jest.config.ts files are ES Modules
+      See https://github.com/jestjs/jest/issues/11453#issuecomment-877653950
+      and https://typestrong.org/ts-node/docs/module-type-overrides/
+      */
+      "jest.config.ts": "esm"
+    }
   }
 }
