--- a/package.json
+++ b/package.json
@@ -12,155 +12,41 @@
     "Martin Wernstål <m4rw3r@gmail.com>"
   ],
   "license": "MIT",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "sideEffects": false,
   "scripts": {
-    "build": "npm-run-all build:*",
-    "build:rollup": "rollup -c rollup.config.js",
-    "build:flow": "cp build/stub/flow.js dist/esm/index.js.flow && cp build/stub/flow.js dist/cjs/index.js.flow",
-    "coverage": "nyc --reporter=html ava --verbose",
-    "clean": "rm -rf dist",
-    "distclean": "rm -rf package-lock.json node_modules dist",
-    "flow": "flow check",
-    "prepack": "npm run clean && npm run test && npm run build",
-    "test": "npm-run-all test:*",
-    "test:flow": "flow status",
-    "test:ava": "ava --verbose",
-    "test:xo": "xo",
-    "watch": "nodemon -w src -w test --exec \"npm run -q test || true\""
+    "build": "pnpm run build:d.ts && pnpm run build:js",
+    "build:d.ts": "rollup -c",
+    "build:js": "tsc --project tsconfig.build.json",
+    "clean": "rm -rf coverage dist",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "prebuild": "pnpm run clean",
+    "check": "tsc --noEmit",
+    "lint": "eslint .",
+    "dist": "pnpm run check && pnpm run test && pnpm run format:check && pnpm run build && pnpm run lint",
+    "format": "prettier -w .",
+    "format:check": "prettier -c .",
+    "prepack": "pnpm run dist"
   },
   "dependencies": {
-    "@rollup/pluginutils": "^4.1.0"
-  },
-  "peerDependencies": {
-    "graphql": "^15.0.0"
+    "@rollup/pluginutils": "^4.2.1",
+    "graphql": "^16.8.1"
   },
   "devDependencies": {
-    "@ava/babel": "^1.0.1",
-    "@babel/plugin-transform-flow-strip-types": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "@rollup/plugin-babel": "^5.0.3",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "ava": "^3.9.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-transform-async-to-promises": "^0.8.15",
-    "eslint-config-xo-flow": "^0.2.0",
-    "eslint-plugin-flowtype": "^5.1.3",
-    "esm": "^3.2.25",
-    "flow-bin": "^0.152.0",
-    "graphql": "^15.1.0",
-    "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
-    "rollup": "^2.16.0",
-    "xo": "^0.32.0"
-  },
-  "xo": {
-    "extends": [
-      "xo-flow"
-    ],
-    "overrides": [
-      {
-        "files": "**/*.test.js",
-        "rules": {
-          "flowtype/no-unused-expressions": "off",
-          "flowtype/require-parameter-type": "off",
-          "flowtype/require-return-type": "off",
-          "no-unused-expressions": "off",
-          "quote-props": "off"
-        }
-      },
-      {
-        "files": [
-          "*.config.js",
-          "*.config.cjs"
-        ],
-        "rules": {
-          "flowtype/require-valid-file-annotation": "off",
-          "import/no-anonymous-default-export": "off"
-        }
-      }
-    ],
-    "rules": {
-      "comma-dangle": [
-        "error",
-        {
-          "arrays": "always-multiline",
-          "objects": "always-multiline",
-          "imports": "always-multiline",
-          "exports": "always-multiline",
-          "functions": "never"
-        }
-      ],
-      "flowtype/array-style-complex-type": [
-        "error",
-        "verbose"
-      ],
-      "flowtype/array-style-simple-type": [
-        "error",
-        "verbose"
-      ],
-      "flowtype/delimiter-dangle": [
-        "error",
-        "always-multiline"
-      ],
-      "flowtype/newline-after-flow-annotation": [
-        "error",
-        "always"
-      ],
-      "flowtype/require-types-at-top": "warn",
-      "flowtype/require-valid-file-annotation": [
-        "error",
-        "always",
-        {
-          "annotationStyle": "block"
-        }
-      ],
-      "flowtype/require-return-type": [
-        "error",
-        "always",
-        {
-          "annotateUndefined": "always"
-        }
-      ],
-      "flowtype/type-import-style": [
-        "error",
-        "declaration"
-      ],
-      "import/extensions": [
-        "error",
-        "never",
-        {
-          "graphql": "always"
-        }
-      ],
-      "max-len": [
-        "error",
-        {
-          "code": 100,
-          "comments": 80,
-          "ignoreStrings": true,
-          "ignoreTemplateLiterals": true
-        }
-      ],
-      "max-params": "off",
-      "no-unused-vars": "error",
-      "object-curly-spacing": [
-        "error",
-        "always"
-      ],
-      "quotes": [
-        "error",
-        "double",
-        {
-          "allowTemplateLiterals": true
-        }
-      ],
-      "unicorn/no-reduce": "off",
-      "unicorn/no-fn-reference-in-iterator": "off",
-      "valid-jsdoc": "off"
-    },
-    "space": 2
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.16",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "rollup": "^4.9.6",
+    "rollup-plugin-dts": "^6.1.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
