--- a/packages/ast-client/package.json
+++ b/packages/ast-client/package.json
@@ -10,14 +10,18 @@
     "access": "public"
   },
   "scripts": {
-    "build": "pnpm run build:d.ts && pnpm run build:js",
+    "build": "pnpm run \"/^build:.*/\"",
     "build:d.ts": "rollup -c",
     "build:js": "tsc --project tsconfig.build.json",
     "clean": "rm -rf coverage dist",
-    "test": "jest",
+    "prepack": "pnpm run clean && pnpm run build",
+    "test": "jest && tstyche",
     "test:watch": "jest --watch"
   },
   "dependencies": {
     "graphql": "^16.8.1"
+  },
+  "devDependencies": {
+    "tstyche": "1.0.0-rc"
   }
 }
