--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,5 +51,13 @@
       */
       "jest.config.ts": "esm"
     }
-  }
+  },
+  "exclude": [
+    /*
+    Ignore type-tests since they do contain code which on purpose produces
+    typechecking errors.
+    See https://github.com/tstyche/tstyche/issues/13
+    */
+    "**/*.test-d.ts"
+  ]
 }
