--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "pnpm run build:d.ts && pnpm run build:js",
+    "build": "pnpm run \"/^build:.*/\"",
     "build:d.ts": "rollup -c",
     "build:js": "tsc --project tsconfig.build.json",
     "clean": "rm -rf coverage dist",
