--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "prebuild": "pnpm run clean",
     "build": "pnpm -r build",
     "check": "tsc --noEmit",
     "lint": "eslint .",
     "clean": "pnpm -r clean",
-    "dist": "pnpm run check && pnpm run test && pnpm run format:check && pnpm run build && pnpm run lint",
+    "dist": "pnpm run clean && pnpm run check && pnpm run test && pnpm run format:check && pnpm run build && pnpm run lint",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "prepack": "pnpm run dist",
@@ -30,7 +29,7 @@
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
-    "rollup": "^4.9.6",
+    "rollup": "^4.10.0",
     "rollup-plugin-dts": "^6.1.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
