--- a/packages/rollup-plugin-ast-import/package.json
+++ b/packages/rollup-plugin-ast-import/package.json
@@ -17,37 +17,16 @@
   "module": "dist/index.js",
   "sideEffects": false,
   "scripts": {
-    "build": "pnpm run build:d.ts && pnpm run build:js",
     "build": "pnpm run \"/^build:.*/\"",
     "build:d.ts": "rollup -c",
     "build:js": "tsc --project tsconfig.build.json",
     "clean": "rm -rf coverage dist",
+    "prepack": "pnpm run clean && pnpm run build",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "prebuild": "pnpm run clean",
-    "check": "tsc --noEmit",
-    "lint": "eslint .",
-    "dist": "pnpm run check && pnpm run test && pnpm run format:check && pnpm run build && pnpm run lint",
-    "format": "prettier -w .",
-    "format:check": "prettier -c .",
-    "prepack": "pnpm run dist"
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@rollup/pluginutils": "^5.1.0",
     "graphql": "^16.8.1"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.16",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.56.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "rollup": "^4.9.6",
-    "rollup-plugin-dts": "^6.1.0",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
   }
 }
