--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,45 +1,20 @@
 {
+  /* File for typechecking and tests ONLY */
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    /* Visit https://aka.ms/tsconfig to read more about this file */
-
-    /* Language and Environment */
-    "target": "es2021",
-    "lib": ["dom", "es2021"],
-    "jsx": "react",
-    "jsxFactory": "createElement",
-    "jsxFragmentFactory": "Fragment",
-
-    /* Modules */
-    "module": "esnext",
-    "rootDir": ".",
-    "moduleResolution": "node",
-
-    /* Emit */
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "stripInternal": true,
-    "declarationDir": "dist",
-
-    /* Interop Constraints */
-    "isolatedModules": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true,
-
-    /* Type Checking */
-    "strict": true,
-    "noImplicitThis": true,
-    "useUnknownInCatchVariables": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "exactOptionalPropertyTypes": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "allowUnusedLabels": false,
-    "allowUnreachableCode": false,
-    "skipLibCheck": false
+    /*
+    map our monorepo paths to their index-files to allow for typechecking
+    without having to build.
+    note: they are relative to the current working directory, often the package
+    root.
+    */
+    "paths": {
+      "@awardit/graphql-ast-client": ["./packages/ast-client/src/index.ts"],
+      "@awardit/graphql-react-hooks": ["./packages/react-hooks/src/index.ts"],
+      "@awardit/rollup-plugin-graphql-ast-import": [
+        "./packages/rollup-plugin-ast-import/src/index.ts"
+      ]
+    }
   },
   /* Tool configuration */
   "ts-node": {
