--- a/packages/example-app/package.json
+++ b/packages/example-app/package.json
@@ -18,7 +18,7 @@
     "start": "node dist/server"
   },
   "dependencies": {
-    "@awardit/graphql-ast-client": "workspace:1.0.0-rc1",
+    "@awardit/graphql-ast-client": "workspace:^",
     "@m4rw3r/react-pause-champ": "^0.2.5",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
