--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "sideEffects": false,
   "publishConfig": {
     "access": "public"
