--- a/packages/rollup-plugin-ast-import/package.json
+++ b/packages/rollup-plugin-ast-import/package.json
@@ -15,6 +15,7 @@
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "sideEffects": false,
   "scripts": {
     "build": "pnpm run build:d.ts && pnpm run build:js",
