--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -29,11 +29,10 @@
     "react-dom": "^18.2.0"
   },
   "peerDependencies": {
-    "@awardit/graphql-ast-client": "workspace:1.0.0-rc1",
+    "@awardit/graphql-ast-client": "^1.0.0",
     "react": "^18.2.0"
   },
   "dependencies": {
-    "@m4rw3r/react-pause-champ": "^0.2.5",
-    "dequal": "^2.0.3"
+    "@m4rw3r/react-pause-champ": "^0.2.5"
   }
 }
