--- a/packages/rollup-plugin-ast-import/package.json
+++ b/packages/rollup-plugin-ast-import/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rollup-plugin-graphql-ast-import",
-  "version": "0.2.0",
+  "name": "@awardit/rollup-plugin-graphql-ast-import",
+  "version": "1.0.0",
   "description": "Rollup plugin enabling imports of operations as AST from .graphql files.",
   "keywords": [
     "rollup-plugin",
