--- a/packages/ast-client/package.json
+++ b/packages/ast-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@awardit/graphql-ast-client",
-  "version": "1.0.0-rc1",
+  "version": "1.0.0",
   "description": "Experimental small GraphQL client adaptable to HTTP/1.x or HTTP/2.x",
   "type": "module",
   "main": "dist/index.js",
