--- a/packages/rollup-plugin-ast-import/package.json
+++ b/packages/rollup-plugin-ast-import/package.json
@@ -23,7 +23,7 @@
     "build:js": "tsc --project tsconfig.build.json",
     "check": "tsc --noEmit",
     "clean": "rm -rf coverage dist",
-    "prepack": "pnpm run clean && pnpm run build",
+    "prepack": "pnpm run clean && pnpm run check && pnpm run test && pnpm run build",
     "test": "jest",
     "test:watch": "jest --watch"
   },
