--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -9,6 +9,9 @@
   "publishConfig": {
     "access": "public"
   },
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "build": "pnpm run build:d.ts && pnpm run build:js",
     "build:d.ts": "rollup -c",
