--- a/packages/rollup-plugin-ast-import/package.json
+++ b/packages/rollup-plugin-ast-import/package.json
@@ -17,6 +17,9 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "build": "pnpm run build:d.ts && pnpm run build:js",
     "build:d.ts": "rollup -c",
