--- a/packages/rollup-plugin-ast-import/package.json
+++ b/packages/rollup-plugin-ast-import/package.json
@@ -17,6 +17,9 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist/*"
   ],
