--- a/packages/example-app/tsconfig.json
+++ b/packages/example-app/tsconfig.json
@@ -16,10 +16,7 @@
       "@manifest": ["./dist/client/.vite/manifest.json"],
       /* Duplicated from root */
       "@awardit/graphql-ast-client": ["../ast-client/src/index.ts"],
-      "@awardit/graphql-react-hooks": ["../react-hooks/src/index.ts"],
-      "@awardit/rollup-plugin-graphql-ast-import": [
-        "../rollup-plugin-ast-import/src/index.ts"
-      ]
+      "@awardit/react-graphql-hooks": ["../react-hooks/src/index.ts"]
     }
   }
 }
