feat(example): Generate GraphQL types and AST

--- a/packages/example-app/package.json
+++ b/packages/example-app/package.json
@@ -9,9 +9,10 @@
   "type": "module",
   "scripts": {
     "build": "pnpm build:js",
+    "build:d.ts": "graphql-codegen",
     "build:js": "vavite --mode=production",
-    "check": "tsc --noEmit",
-    "clean": "rm -rf dist",
+    "check": "graphql-codegen && tsc --noEmit",
+    "clean": "rm -rf dist src/*.graphql.ts src/schema.d.ts",
     "dev": "vite",
     "preview": "vite preview",
     "prod": "pnpm run build && pnpm run start",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "@awardit/graphql-ast-client": "workspace:^",
+    "@awardit/react-graphql-hooks": "workspace:^",
     "@m4rw3r/react-pause-champ": "^0.2.5",
     "express": "^4.18.3",
     "graphql": "^16.8.1",
@@ -26,12 +28,18 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/near-operation-file-preset": "^3.0.0",
+    "@graphql-codegen/typescript": "^4.0.6",
+    "@graphql-codegen/typescript-operations": "^4.2.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@types/express": "^4.17.21",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "vavite": "^4.1.1",
-    "vite": "^5.1.4",
+    "vite": "^5.1.5",
+    "vite-plugin-graphql-codegen": "^3.3.6",
     "vite-tsconfig-paths": "^4.3.1"
   }
 }
