--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "test:types": "pnpm -r test:types"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
-    "eslint": "^8.57.0",
+    "@types/node": "^22.2.0",
+    "eslint": "^9.9.0",
     "jest": "^29.7.0",
-    "prettier": "^3.2.5",
-    "rollup": "^4.14.3",
+    "prettier": "^3.3.3",
+    "rollup": "^4.20.0",
     "rollup-plugin-auto-external": "^2.0.0",
-    "rollup-plugin-dts": "^6.1.0",
-    "ts-jest": "^29.1.2",
+    "rollup-plugin-dts": "^6.1.1",
+    "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.1.0"
   }
 }
