--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "check": "pnpm -r check",
     "lint": "eslint .",
     "clean": "pnpm -r clean",
+    "distclean": "pnpm -r clean && find . -name node_modules -prune -exec rm -r \"{}\" \\;",
     "dist": "pnpm run clean && pnpm run check && pnpm run test && pnpm run format:check && pnpm run build && pnpm run lint",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
