--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@awardit/react-graphql-hooks",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -33,7 +33,7 @@
   },
   "peerDependencies": {
     "@awardit/graphql-ast-client": "^1.0.0",
-    "react": "^18.2.0"
+    "react": "^18.2.0 || ^19.0.0"
   },
   "dependencies": {
     "@m4rw3r/react-pause-champ": "^1.0.1"
